use `descripton.markdown`, use lowercase annotation, example of `swaggerignore:"true"`
