# handler/customer_handler.go
@@ -6,87 +6,92 @@ type CustomerHandler struct {
 }
 
 // GetCustomer godoc
-// @Summary Get Customer
-// @Description  Get customer by ID
-// @Security ApiKeyAuth
-// @ID GetCustomer
-// @Accept json
-// @Produce json
-// @Param id path int true "ID of customer to be gotten"
-// @Success 200 {object} model.CustomerResponse "OK"
-// @Success 400 {object} model.Response "Bad Request"
-// @Success 401 {object} model.Response "Unauthorized"
-// @Success 409 {object} model.Response "Conflict"
-// @Success 500 {object} model.Response "Internal Server Error"
+// @summary Get Customer
+// @description  Get customer by id
+// @tags customers
+// @security ApiKeyAuth
+// @id GetCustomer
+// @accept json
+// @produce json
+// @param id path int true "id of customer to be gotten"
+// @response 200 {object} model.Customer "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 409 {object} model.Response "Conflict"
+// @response 500 {object} model.Response "Internal Server Error"
 // @Router /api/v1/customers/:id [get]
 func (h *CustomerHandler) GetCustomer(c *gin.Context) {
 	//Logic goes here
 }
 
 // ListCustomers godoc
-// @Summary List Customers
-// @Description List all customers
-// @Security ApiKeyAuth
-// @ID ListCustomers
-// @Accept json
-// @Produce json
-// @Success 200 {object} model.CustomersResponse "OK"
-// @Success 400 {object} model.Response "Bad Request"
-// @Success 401 {object} model.Response "Unauthorized"
-// @Success 409 {object} model.Response "Conflict"
-// @Success 500 {object} model.Response "Internal Server Error"
+// @summary List Customers
+// @description List all customers
+// @tags customers
+// @security ApiKeyAuth
+// @id ListCustomers
+// @accept json
+// @produce json
+// @response 200 {object} model.Customers "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 409 {object} model.Response "Conflict"
+// @response 500 {object} model.Response "Internal Server Error"
 // @Router /api/v1/customers [get]
 func (h *CustomerHandler) ListCustomers(c *gin.Context) {
 	//Logic goes here
 }
 
 // CreateCustomer godoc
-// @Summary Create Customer
-// @Description Create new customer
-// @Security ApiKeyAuth
-// @ID CreateCustomer
-// @Accept json
-// @Produce json
-// @Param Customer body model.CustomerForCreate true "Customer data to be created"
-// @Success 200 {object} model.Response "OK"
-// @Success 400 {object} model.Response "Bad Request"
-// @Success 401 {object} model.Response "Unauthorized"
-// @Success 500 {object} model.Response "Internal Server Error"
+// @summary Create Customer
+// @description Create new customer
+// @tags customers
+// @security ApiKeyAuth
+// @id CreateCustomer
+// @accept json
+// @produce json
+// @param Customer body model.CustomerForCreate true "Customer data to be created"
+// @response 200 {object} model.Response "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 500 {object} model.Response "Internal Server Error"
 // @Router /api/v1/customers [post]
 func (h *CustomerHandler) CreateCustomer(c *gin.Context) {
 	//Logic goes here
 }
 
 // DeleteCustomer godoc
-// @Summary Delete Customer
-// @Description Delete customer by ID
-// @Security ApiKeyAuth
-// @ID DeleteCustomer
-// @Accept json
-// @Produce json
-// @Param id path int true "ID of customer to be deleted"
-// @Success 200 {object} model.Response "OK"
-// @Success 400 {object} model.Response "Bad Request"
-// @Success 401 {object} model.Response "Unauthorized"
-// @Success 500 {object} model.Response "Internal Server Error"
+// @summary Delete Customer
+// @description Delete customer by id
+// @tags customers
+// @security ApiKeyAuth
+// @id DeleteCustomer
+// @accept json
+// @produce json
+// @param id path int true "id of customer to be deleted"
+// @response 200 {object} model.Response "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 500 {object} model.Response "Internal Server Error"
 // @Router /api/v1/customers/:id [delete]
 func (h *CustomerHandler) DeleteCustomer(c *gin.Context) {
 	//Logic goes here
 }
 
 // UpdateCustomer godoc
-// @Summary Update Customer
-// @Description Update customer by ID
-// @Security ApiKeyAuth
-// @ID UpdateCustomer
-// @Accept json
-// @Produce json
-// @Param id path int true "ID of customer to be updated"
-// @Param Customer body model.CustomerForUpdate true "Customer data to be updated"
-// @Success 200 {object} model.Response "OK"
-// @Success 400 {object} model.Response "Bad Request"
-// @Success 401 {object} model.Response "Unauthorized"
-// @Success 500 {object} model.Response "Internal Server Error"
+// @summary Update Customer
+// @description Update customer by id
+// @tags customers
+// @security ApiKeyAuth
+// @id UpdateCustomer
+// @accept json
+// @produce json
+// @param id path int true "id of customer to be updated"
+// @param Customer body model.CustomerForUpdate true "Customer data to be updated"
+// @response 200 {object} model.Response "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 500 {object} model.Response "Internal Server Error"
 // @Router /api/v1/customers/:id [patch]
 func (h *CustomerHandler) UpdateCustomer(c *gin.Context) {
 	//Logic goes here
